@@ -58,7 +58,7 @@ When making requests with the <<Metrics API>>, you can specify `&group=jvm` to l
 
 * direct and mapped buffer pools
 * class loading / unloading
-* OS memory, CPU time, file descriptors, swap, system load
+* OS memory, CPU time in nanoseconds, file descriptors, swap, system load
 * GC count and time
 * heap, non-heap memory and GC pools
 * number of threads, their states and deadlocks
