@@ -111,6 +111,8 @@ Bug Fixes
 * SOLR-16747: The Solr source release can now be built/checked using gradle.
   The solr-ref-guide tasks will not be included by default if the root directory is not a github repository. (Houston Putman)
 
+* SOLR-15083: Fix default solr-exporter-config.xml metrics with incorrect time unit conversions. (Matthew Biscocho via janhoy)
+
 * SOLR-16755: bin/solr's '-noprompt' option no longer works for examples (hossman, janhoy, Houston Putman)
 
 * SOLR-7609: Internal update requests should fail back to the client in some edge cases for shard splits. Use HTTP status 510 so the client can retry the operation. (Alex Deparvu, David Smiley, Tomás Fernández Löbbe)
